# ldpc

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  configure.h.in  getdata.sh  ldpc.code-workspace  main.cpp  multi_ratio_ldpc.cpp  test.cpp
LDPCc/: CMakeLists.txt  ldpc.cpp  ldpc.h
channel/: channel.cpp  channel.h
code-conf/: makefile.257_4x12  makefile.257_4x24  makefile.257_6x12  makefile.257_6x16  makefile.257_6x20  makefile.257_6x24  makefile.codes  makefile.masking257_4x24  makefile.masking257_6x12  makefile.masking257_6x16  makefile.masking257_6x20  makefile.masking257_6x24  makefile.masking257_6x8
codes/: genG.m  genH.m  genH_lin_way.m  genH_mask.m  qc257_4xX.m  qc257_6xX.m  qc257_XxY.m  test_tmp.m
decoder/: CMakeLists.txt  decoder.cpp  decoder.h
doc/: multi-rate.md  overview.drawio  需求分析.md
encoder/: CMakeLists.txt  encoder.cpp  encoder.h
matrix/: CNsCon257_6x12.csv  CNsCon257_6x16.csv  CNsCon257_6x20.csv  CNsCon257_6x24.csv  CNsCon_mask.csv  VNsCon257_6x12.csv  VNsCon257_6x16.csv  VNsCon257_6x20.csv  VNsCon257_6x24.csv  VNsCon_mask.csv
tools/: draw_svg.gp  main.py  send_mail.py
